# JdFlows

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
config/: app.json  system.json
docs/: AGENTS.md  CLAUDE.md  FACTORY_AI_RULES.md  GUI优化补充指南.md  Qt_QSS_重要警告.md  README.md  UNIVERSAL_AI_DEVELOPMENT_RULES.md  todos.md  任务规划.md  开发指南.md
src/: __init__.py  main_application.py
src/automation/: __init__.py
src/core/: __init__.py  application_core.py  config.py  config_manager.py  exception_handler.py  exceptions.py  logger.py  logging_system.py  state.py  state_manager.py
src/data/: __init__.py
src/gui/: __init__.py  main_window.py  style_manager.py
src/gui/components/: __init__.py
src/gui/controllers/: __init__.py
src/gui/dialogs/: __init__.py  settings_dialog.py
src/gui/pages/: __init__.py
src/gui/themes/: __init__.py
src/utils/: __init__.py  formatters.py  helpers.py  validators.py
tests/: __init__.py  conftest.py
tests/test_core/: __init__.py  test_application_core.py  test_config.py  test_config_manager.py  test_exceptions.py  test_main_application.py  test_state.py  test_state_manager.py
tests/test_gui/: __init__.py  test_main_window.py  test_settings_dialog.py  test_style_manager.py
tests/test_utils/: __init__.py  test_formatters.py  test_helpers.py  test_validators.py
